fixtures/phase5/errors/type-error-uncaught.php
<?php
// phase5-runtime: category=errors expect=fail
throw new TypeError("bad");
